Fix gradle.yml syntax

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,8 +1,12 @@
 name: Java CI
 
-on: [push, pull_request]
-  paths-ignore:
-    - '**/*.md'
+on:
+  push:
+    paths-ignore:
+      - '**/*.md'
+  pull-request:
+    paths-ignore:
+      - '**/*.md'
 
 jobs:
   build:
